--- a/xpi/locale/de/options.dtd
+++ b/xpi/locale/de/options.dtd
@@ -7,7 +7,9 @@
 <!ENTITY Ctr_space			"Zwischenraum">
 <!ENTITY Ctr_separator		"Trennlinie">
 <!ENTITY Ctr_puibseparator	"Trennlinie für die Menüschaltfläche">
+<!ENTITY Ctr_navthrobber	"Aktivitätsanzeige">
 <!ENTITY Ctr_sidebarbutton	"Seitenleiste">
+<!ENTITY Ctr_windowcontrols	"Kontrollelemente (Vollbild)">
 
 <!ENTITY Ctr_cuibuttons		"Schaltflächen">
 <!ENTITY Ctr_cuibutnormal	"Normal">
@@ -40,7 +42,9 @@
 <!ENTITY Ctr_tabwidthcla	"(klassisch)">
 <!ENTITY Ctr_tabmaxwidth	"Maximalbreite:">
 <!ENTITY Ctr_tabminwidth	"Minimalbreite:">
-<!ENTITY Ctr_tabwidthinfo	"Die Minimal- und Maximalbreite von Tabs wird durch TabMixPlus / TabUtilities kontrolliert">
+<!ENTITY Ctr_tabwidthinfo	"Die Minimal- und Maximalbreite von Tabs wird durch TabMixPlus kontrolliert">
+<!ENTITY Ctr_tabwidthinfo2	"Die Minimal- und Maximalbreite von Tabs wird durch TabUtilities kontrolliert">
+<!ENTITY Ctr_tabwidthinfo3	"Werte unter 48px sorgen meistens für eine fehlerhafte Darstellung!">
 <!ENTITY Ctr_closetab_0		"'Tab schließen'">
 <!ENTITY Ctr_closetab_1		"Nur auf dem aktiven Tab">
 <!ENTITY Ctr_closetab_2		"Nirgends (deaktiviert)">
@@ -136,17 +140,17 @@
 <!ENTITY Ctr_bold			"Fett">
 <!ENTITY Ctr_italic			"Kursiv">
 
-<!ENTITY Ctr_favicon		"Lesezeichensymbol (Favicon)">
+<!ENTITY Ctr_favicon		"Lesezeichensymbol/Favicon">
 <!ENTITY Ctr_emptyfavicon	"Leeres Lesezeichensymbol auf Tabs wiederherstellen">
-<!ENTITY Ctr_emptyfavicon2	"Leeres und gepunktetes Lesezeichensymbol durch Papierblattsymbol ersetzen">
-<!ENTITY Ctr_noemptypticon	"Leeres Lesezeichensymbol vom angehefteten Tab entfernen">
-<!ENTITY Ctr_faviconurl0	"Symbole in der Adressleiste">
-<!ENTITY Ctr_faviconurl		"Lesezeichensymbol (Favicon) in der Schaltfläche zur Webseitenidentität (Firefox neustarten)">
+<!ENTITY Ctr_emptyfavicon2	"Leeres Lesezeichensymbol durch Papierblattsymbol ersetzen">
+<!ENTITY Ctr_noemptypticon	"Leeres Lesezeichensymbol auf angeheftetem Tab verstecken">
+<!ENTITY Ctr_faviconurl0	"Symbole in der Adressleistenschaltfläche zur Webseitenidentität">
+<!ENTITY Ctr_faviconurl		"Lesezeichensymbol/Favicon der Webseite (Firefox neustarten)">
 <!ENTITY Ctr_padlock_hid	"Schloss-Symbol (versteckt)">
 <!ENTITY Ctr_padlock_def	"Schloss-Symbol (Standard)">
 <!ENTITY Ctr_padlock_cla	"Schloss-Symbol (klassisch)">
 <!ENTITY Ctr_padlock_mod	"Schloss-Symbol (modern)">
-<!ENTITY Ctr_padlock_ext	"Sicherheitssymbole">
+<!ENTITY Ctr_padlock_ext	"Andere Sicherheitssymbole">
 
 <!ENTITY Ctr_invicons		"Invertierte Symbole">
 <!ENTITY Ctr_menubar		"Menüleiste">
@@ -183,9 +187,9 @@
 <!ENTITY Ctr_dlanimation	"'Download gestartet und beendet' (about:config Einstellung)">
 
 <!ENTITY Ctr_toolsitem		"Eintrag im Menü 'Extras'">
-<!ENTITY Ctr_appmenuitem	"Eintrag im Optionsuntermenü der Firefox-Schaltfläche">
+<!ENTITY Ctr_appmenuitem	"Eintrag im Einstellungsuntermenü der Firefox-Schaltfläche">
 <!ENTITY Ctr_contextitem	"Eintrag im Leisten-Kontextmenü">
-<!ENTITY Ctr_cuibotbuttons	"Einstellungen im Modus 'Anpassen'">
+<!ENTITY Ctr_cuibotbuttons	"Einstellungsschaltflächen im Modus 'Anpassen'">
 
 
 <!ENTITY Ctr_pw_settings	"Einstellungen">
